# restaurant_grpc

./: .gitignore  Cargo.toml  build.rs
migrations/: 20230624150543_init_extensions.down.sql  20230624150543_init_extensions.up.sql  20230624150801_restaurants.down.sql  20230624150801_restaurants.up.sql
proto/: restaurant.proto
src/: db.rs  handlers.rs  main.rs
src/handlers/: restaurant.rs
