[package]
name = "restaurant_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "postgres", "uuid", "macros", "time" ] }
tokio = { version = "1.28.2", features = ["full"] }
tonic = { version = "0.9.2" }
prost = { version = "0.11.9" }
uuid = { version = "1.3.3", features = ["v4"] }

[build-dependencies]
tonic-build = { version = "0.9.2" }
